Fixing cup styles on mobile

--- a/public/theme/theme.css
+++ b/public/theme/theme.css
@@ -13,21 +13,46 @@ body, .wrapper .section-container {
 .topnavbar {
   background-color: #ec2121;
   background-image: linear-gradient(to right, #ec2121 0%, #f05050 100%);
-  background-repeat: repeat-x; }
-  @media (min-width: 992px) {
-    .topnavbar .navbar-nav > .nav-item.show > .nav-link, .topnavbar .navbar-nav > .nav-item.show > .nav-link:hover, .topnavbar .navbar-nav > .nav-item.show > .nav-link:focus {
-      box-shadow: 0 -3px 0 #dc1313 inset; } }
-  .topnavbar .navbar-nav > .nav-item > .navbar-text {
-    color: #fff; }
-  .topnavbar .navbar-nav > .nav-item > .nav-link,
-  .topnavbar .navbar-nav > .nav-item.show > .nav-link {
-    color: #fff; }
-    .topnavbar .navbar-nav > .nav-item > .nav-link:hover, .topnavbar .navbar-nav > .nav-item > .nav-link:focus,
-    .topnavbar .navbar-nav > .nav-item.show > .nav-link:hover,
-    .topnavbar .navbar-nav > .nav-item.show > .nav-link:focus {
-      color: #9a0d0d; }
-  .topnavbar .dropdown-item.active, .topnavbar .dropdown-item:active {
-    background-color: #ec2121; }
+  background-repeat: repeat-x; 
+}
+  
+@media (min-width: 992px) {
+  .topnavbar .navbar-nav > .nav-item.show > .nav-link, 
+  .topnavbar .navbar-nav > .nav-item.show > .nav-link:hover, 
+  .topnavbar .navbar-nav > .nav-item.show > .nav-link:focus {
+      box-shadow: 0 -3px 0 #dc1313 inset; 
+  } 
+}
+
+.topnavbar .navbar-nav > .nav-item > .navbar-text {
+  color: #fff; 
+}
+
+.topnavbar .navbar-nav > .nav-item > .nav-link,
+.topnavbar .navbar-nav > .nav-item.show > .nav-link {
+  color: #fff; 
+}
+    
+.topnavbar .navbar-nav > .nav-item > .nav-link:hover, 
+.topnavbar .navbar-nav > .nav-item > .nav-link:focus,
+.topnavbar .navbar-nav > .nav-item.show > .nav-link:hover,
+.topnavbar .navbar-nav > .nav-item.show > .nav-link:focus {
+  color: #9a0d0d; 
+}
+  
+.topnavbar .dropdown-item.active, 
+.topnavbar .dropdown-item:active {
+  background-color: #ec2121; 
+}
+
+
+@media (max-width: 991px) {
+  .navbar-collapse .rbt {
+    display: inline-block;
+    vertical-align: middle;
+    width: calc(100% - 61px);
+  }
+}
 
 /* ========================================================================
    Component: sidebar
